파일 업데이트~

--- a/html/가이드.html
+++ b/html/가이드.html
@@ -109,7 +109,7 @@
   <!-- 가이드 제목 -->
   <div class="guide_tit mt50">커스텀 스크롤바</div>
   <div class="inner mt30">
-    <div class="left_cont mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+    <div class="left_cont mCustomScrollbar" data-mcs-theme="minimal-dark">
       <ul>
         <li>리스트 01</li>
         <li>리스트 02</li>
