--- a/html/사무1_리스트.html
+++ b/html/사무1_리스트.html
@@ -19,21 +19,97 @@
   <script src="js/common_02.js"></script>
 </head>
 <body>
-<div class="wrap">
+<div class="wrap sample">
+  <!-- searchlayer 모바일 상세검색 -->
+  <div class="searchlayer mo">
+    <div class="search_cont">
+      <span class="search_box">
+        <span class="input_cont">
+          <input type="text" class="ico_search" placeholder="검색어를 입력해 주세요.">
+          <button class="btn_search"><span class="hidden">검색</span></button>
+        </span>
+        <button class="btn_layer_close" onclick="searchClose();"><span class="hidden">닫기</span></button>
+      </span>
+    </div>
+    <div class="content_wrap">
+      <!-- select_box -->
+      <div class="select_box full">
+        <span class="select">기관별</span>
+        <div class="option">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+            <ul>
+              <li>선택함1</li>
+              <li>선택함2</li>
+              <li>선택함3</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- select_box -->
+      <div class="select_box full">
+        <span class="select">분야별</span>
+        <div class="option">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+            <ul>
+              <li>선택함1</li>
+              <li>선택함2</li>
+              <li>선택함3</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- select_box -->
+      <div class="select_box full">
+        <span class="select">사무구분</span>
+        <div class="option">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+            <ul>
+              <li>선택함1</li>
+              <li>선택함2</li>
+              <li>선택함3</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- select_box -->
+      <div class="select_box full">
+        <span class="select">사무유형</span>
+        <div class="option">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+            <ul>
+              <li>선택함1</li>
+              <li>선택함2</li>
+              <li>선택함3</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- header -->
   <div class="header">
     <div class="inner">
       <div class="header_cont">
-        <h1 class="logo"><a href="#none">지방이양사무관리시스템</a></h1>
-        <ul class="menu">
-          <li><a href="#none" class="on">법령</a></li>
-          <li><a href="#none">조사</a></li>
-          <li><a href="#none">사무</a></li>
-          <li><a href="#none">이양사무</a></li>
-          <li><a href="#none">통계</a></li>
-          <li><a href="#none">대국민 포털관리</a></li>
-          <li><a href="#none">시스템 관리</a></li>
-        </ul>
+        <div class="header_top_cont">
+          <h1 class="logo"><a href="#none">지방이양사무관리시스템</a></h1>
+          <div class="right_cont mo">
+            <button class="btn_search" onclick="searchLayer(this);"><span class="hidden">검색</span></button>
+            <button class="btn_login"><span class="hidden">로그인</span></button>
+            <button class="btn_menu"><span class="hidden">메뉴</span></button>
+          </div>
+        </div>
+        <div class="top_menu_cont">
+          <ul class="menu">
+            <li><a href="#none" class="on">법령</a></li>
+            <li><a href="#none">조사</a></li>
+            <li><a href="#none">사무</a></li>
+            <li><a href="#none">이양사무</a></li>
+            <li><a href="#none">통계</a></li>
+            <li><a href="#none">대국민 포털관리</a></li>
+            <li><a href="#none">시스템 관리</a></li>
+          </ul>
+        </div>
         <!-- 로그인/회원가입 버튼 -->
         <div class="info_cont" style="display: none;">
           <span class="bar"><a href="#none" class="ico_login"><span>로그인</span></a></span>
@@ -41,7 +117,7 @@
         </div>
 
         <!-- 마이페이지/사용자/로그아웃 -->
-        <div class="info_cont">
+        <div class="info_cont pc">
           <ul class="info_menu">
             <li class="bar"><a href="#none">마이페이지</a></li>
           </ul>
@@ -61,32 +137,42 @@
     <div class="sc bg_top">
       <div class="inner">
         <div class="location">
-          <a href="#none">홈</a>
-          <a href="#none">사무</a>
+          <ul>
+            <li><a href="#none">홈</a></li>
+            <li><a href="#none">사무</a></li>
+          </ul>
         </div>
-        <a href="#none" class="btn ico_print"><span>프린트</span></a>
+        <div class="pc">
+          <a href="#none" class="btn ico_print"><span>프린트</span></a>
+        </div>
         <h2 class="title">사무</h2>
-        <div class="search_cont">
+        <div class="search_cont pc">
           <span class="search_box">
-            <!-- <select name="" id="">
-              <option value="전체">전체</option>
-              <option value="옵션1">옵션1</option>
-              <option value="옵션2">옵션2</option>
-            </select> -->
             <span class="input_cont">
               <input type="text" class="ico_search" placeholder="검색어를 입력해 주세요.">
+              <button class="btn_search"><span class="hidden">검색</span></button>
             </span>
             <button class="btn btn_size_s btn_search"><span>상세검색</span></button>
           </span>
         </div>
+
+        <div class="search_cont mo">
+          <span class="search_box">
+            <span class="input_cont" onclick="searchLayer(this);">
+              <input type="text" class="ico_search" placeholder="검색어를 입력해 주세요." readonly>
+              <button class="btn_search"><span class="hidden">검색</span></button>
+            </span>
+          </span>
+        </div>
         <!-- 상세검색 화면 -->
-        <div class="search_cont_detail on">
+        <!-- class on 이 붙으면 열림 -->
+        <div class="search_cont_detail pc">
           <div class="cont">
             <!-- select_box -->
-            <div class="select_box" style="min-width:200px;">
+            <div class="select_box">
               <span class="select">선택함</span>
               <div class="option">
-                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                   <ul>
                     <li>선택함1</li>
                     <li>선택함2</li>
@@ -96,10 +182,10 @@
               </div>
             </div>
             <!-- select_box -->
-            <div class="select_box" style="min-width:200px;">
+            <div class="select_box">
               <span class="select">선택함</span>
               <div class="option">
-                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                   <ul>
                     <li>선택함1</li>
                     <li>선택함2</li>
@@ -109,10 +195,23 @@
               </div>
             </div>
             <!-- select_box -->
-            <div class="select_box" style="min-width:200px;">
+            <div class="select_box">
               <span class="select">선택함</span>
               <div class="option">
-                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                  <ul>
+                    <li>선택함1</li>
+                    <li>선택함2</li>
+                    <li>선택함3</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- select_box -->
+            <div class="select_box">
+              <span class="select">선택함</span>
+              <div class="option">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                   <ul>
                     <li>선택함1</li>
                     <li>선택함2</li>
@@ -181,7 +280,7 @@
                 <th rowspan="3">사무유형</th>
                 <th rowspan="3">세부사무<br>유형</th>
                 <th rowspan="3">위임사무<br>여부</th>
-                <th rowspan="3">세부사무<br>유형</th>
+                <th rowspan="3">재위임<br>사무여부</th>
                 <th rowspan="3">위임사무<br>여부</th>                
               </tr>
               <tr class="color_gray">
@@ -351,7 +450,8 @@
         </div>
 
         <!-- paging -->
-        <div class="paging pc">
+        <div class="paging">
+          <a href="#none" class="first"></a>
           <a href="#none" class="prev"></a>
           <ol>
             <li><a href="#none" class="on">1</a></li>
@@ -359,27 +459,9 @@
             <li><a href="#none">3</a></li>
             <li><a href="#none">4</a></li>
             <li><a href="#none">5</a></li>
-            <li><a href="#none">6</a></li>
-            <li><a href="#none">7</a></li>
-            <li><a href="#none">8</a></li>
-            <li><a href="#none">9</a></li>
-            <li><a href="#none">10</a></li>
           </ol>
           <a href="#none" class="next"></a>
-        </div>
-
-        <!-- paging -->
-        <div class="paging mo">
-          <a href="#none" class="prev"></a>
-          <ol>
-            <li><a href="#none" class="on">1</a></li>
-            <li><a href="#none">2</a></li>
-            <li><a href="#none">3</a></li>
-            <li><a href="#none">4</a></li>
-            <li><a href="#none">5</a></li>
-            <li><a href="#none">6</a></li>
-          </ol>
-          <a href="#none" class="next"></a>
+          <a href="#none" class="last"></a>
         </div>
       </div>
     </div>
@@ -393,12 +475,13 @@
           <a href="#none" class="bar">이용약관</a>
           <a href="#none" class="point">개인정보처리방침</a>
         </div>
-        <div class="right_cont">
+        <div class="right_cont pc">
           <!-- select_box -->
           <div class="select_box type02" style="min-width:240px;">
             <span class="select">소속기관 누리집 바로가기</span>
             <div class="option">
-              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                 <ul>
                   <li>선택함1</li>
                   <li>선택함2</li>
@@ -411,7 +494,7 @@
           <div class="select_box type02" style="min-width:240px;">
             <span class="select">신하기관 누리집 바로가기</span>
             <div class="option">
-              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                 <ul>
                   <li>선택함1</li>
                   <li>선택함2</li>
@@ -466,6 +549,39 @@
           <p>
             <span class="s_txt">(근무시간 외) 당직실 : 044-205-1600</span>
           </p>
+        </div>
+        <div class="select_cont mo">
+          <!-- select_box -->
+          <div class="select_box type02" style="min-width:240px;">
+            <span class="select">소속기관 누리집 바로가기</span>
+            <div class="option_wrap">
+              <div class="option">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                  <ul>
+                    <li>선택함1</li>
+                    <li>선택함2</li>
+                    <li>선택함3</li>
+                    <li>선택함3</li>
+                    <li>선택함3</li>
+                    <li>선택함3</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- select_box -->
+          <div class="select_box type02" style="min-width:240px;">
+            <span class="select">신하기관 누리집 바로가기</span>
+            <div class="option">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
+                <ul>
+                  <li>선택함1</li>
+                  <li>선택함2</li>
+                  <li>선택함3</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
         <p class="copy">ⓒ Ministry of the Interior and Safety. All rights reserved.</p>
       </div>
