--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 					<td class="tleft"></td>
 				</tr>
 
-				<!-- 홈 -->
+				<!-- 메인 -->
 				<tr class="sqnc">
 					<td class="no num"></td><!-- no -->
-					<td class="tleft">홈</td><!-- 1depth -->
+					<td class="tleft">메인</td><!-- 1depth -->
 					<td class="tleft"></td><!-- 2depth -->
 					<td class="tleft"></td><!-- 3depth -->
 					<td class="tleft"></td><!-- 4depth -->
 					<td class="tleft"></td><!-- 5depth -->
-					<td class="tleft"><a href="html/파일명.html" target="_blank">파일명.html</a></td><!-- 파일링크 -->
+					<td class="tleft"><a href="html/메인.html" target="_blank">메인.html</a></td><!-- 파일링크 -->
 					<td>박성광</td>
 					<td><span class="ing">진행</span></td>
 					<td><span style="color:tomato"></span></td>
