--- a/html/조사상세_승인요청관리자.html
+++ b/html/조사상세_승인요청관리자.html
@@ -19,7 +19,7 @@
   <script src="js/common_02.js"></script>
 </head>
 <body>
-<div class="wrap">
+<div class="wrap sample">
   <!-- searchlayer 모바일 상세검색 -->
   <div class="searchlayer mo">
     <div class="search_cont">
@@ -36,7 +36,7 @@
       <div class="select_box full">
         <span class="select">기관별</span>
         <div class="option">
-          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
             <ul>
               <li>선택함1</li>
               <li>선택함2</li>
@@ -49,7 +49,7 @@
       <div class="select_box full">
         <span class="select">분야별</span>
         <div class="option">
-          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
             <ul>
               <li>선택함1</li>
               <li>선택함2</li>
@@ -62,7 +62,7 @@
       <div class="select_box full">
         <span class="select">사무구분</span>
         <div class="option">
-          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
             <ul>
               <li>선택함1</li>
               <li>선택함2</li>
@@ -75,7 +75,7 @@
       <div class="select_box full">
         <span class="select">사무유형</span>
         <div class="option">
-          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+          <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
             <ul>
               <li>선택함1</li>
               <li>선택함2</li>
@@ -86,7 +86,6 @@
       </div>
     </div>
   </div>
-  <!--  -->
 
   <!-- header -->
   <div class="header">
@@ -389,11 +388,7 @@
               <tr>
                   <th scope="row">비고</th>
                   <td colspan="3">
-                    <div class="form-element__wrap">                                
-                        <span class="form-element__inner input-type">
-                            <input type="text" value="근거규정 참조하여 작성함" class="input-type1-font14" placeholder="비고" title="비고 ">
-                        </span>
-                    </div>                              
+                    <textarea name="" id="" value="근거규정 참조하여 작성함"></textarea>
                   </td>               
               </tr>                                                                                                                                                               
             </tbody>
@@ -827,11 +822,7 @@
               <tr>
                   <th scope="row">비고</th>
                   <td>
-                    <div class="form-element__wrap">                                
-                        <span class="form-element__inner input-type">
-                            <input type="text" value="근거규정 참조하여 작성함" class="input-type1-font14" placeholder="비고" title="비고 ">
-                        </span>
-                    </div>                              
+                    <textarea name="" id="" value="근거규정 참조하여 작성함"></textarea>
                   </td>               
               </tr>                                                                                                                                                               
             </tbody>
@@ -1159,7 +1150,7 @@
   </div>
 
   <!-- footer -->
-  <div class="footer pc">
+  <div class="footer">
     <div class="inner">
       <div class="top_info float_box">
         <div class="left_cont">
@@ -1172,7 +1163,7 @@
             <span class="select">소속기관 누리집 바로가기</span>
             <div class="option">
 
-              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                 <ul>
                   <li>선택함1</li>
                   <li>선택함2</li>
@@ -1185,7 +1176,7 @@
           <div class="select_box type02" style="min-width:240px;">
             <span class="select">신하기관 누리집 바로가기</span>
             <div class="option">
-              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                 <ul>
                   <li>선택함1</li>
                   <li>선택함2</li>
@@ -1247,7 +1238,7 @@
             <span class="select">소속기관 누리집 바로가기</span>
             <div class="option_wrap">
               <div class="option">
-                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+                <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                   <ul>
                     <li>선택함1</li>
                     <li>선택함2</li>
@@ -1264,7 +1255,7 @@
           <div class="select_box type02" style="min-width:240px;">
             <span class="select">신하기관 누리집 바로가기</span>
             <div class="option">
-              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark" style="overflow: visible;height:100px">
+              <div class="mCustomScrollbar" data-mcs-theme="minimal-dark">
                 <ul>
                   <li>선택함1</li>
                   <li>선택함2</li>
